expressions.scanner.cpp
/* Generated by re2c 0.14.3 on Wed Nov 18 13:50:10 2015 */
#line 1 "/home/veei/src/calculator/expressions.scanner.re"
/**
 * re2c scanner definition
 * vim: set ts=4 sw=4 tw=0 et syntax=cpp:
 */

#include "expressions.scanner.h"

namespace scanner
{
namespace expressions
{

CToken CScanner::operator()(const std::string& expression, CState& state) const
{
beginning:
    {
        std::string::const_pointer marker;
        std::string::const_pointer cursor = expression.c_str() + state.offset();
        std::string::const_pointer p_start = expression.c_str() + state.offset();
        size_t start = state.offset();


#line 26 "/home/veei/src/calculator/expressions.scanner.cpp"
    {
        unsigned char yych;
        unsigned int yyaccept = 0;

        yych = (unsigned char)*(marker = cursor);
        switch (yych) {
        case 0x00:    goto yy42;
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\v':
        case '\f':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
        case '#':
        case '$':
        case ',':
        case ':':
        case ';':
        case '?':
        case '@':
        case '[':
        case '\\':
        case ']':
        case '^':
        case '`':
        case '{':
        case '}':
        case '~':
        case 0x7F:    goto yy44;
        case '\t':
        case '\n':
        case '\r':
        case ' ':    goto yy3;
        case '!':    goto yy18;
        case '"':    goto yy9;
        case '%':    goto yy34;
        case '&':    goto yy20;
        case '\'':    goto yy11;
        case '(':    goto yy38;
        case ')':    goto yy40;
        case '*':    goto yy36;
        case '+':    goto yy28;
        case '-':    goto yy30;
        case '.':    goto yy26;
        case '/':    goto yy32;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':    goto yy7;
        case '<':    goto yy14;
        case '=':    goto yy12;
        case '>':    goto yy16;
        case 'A':
        case 'a':    goto yy21;
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '_':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':    goto yy25;
        case 'F':
        case 'f':    goto yy6;
        case 'N':
        case 'n':    goto yy24;
        case 'O':
        case 'o':    goto yy23;
        case 'T':
        case 't':    goto yy4;
        case '|':    goto yy22;
        case 0xC2:
        case 0xC3:
        case 0xC4:
        case 0xC5:
        case 0xC6:
        case 0xC7:
        case 0xC8:
        case 0xC9:
        case 0xCA:
        case 0xCB:
        case 0xCC:
        case 0xCD:
        case 0xCE:
        case 0xCF:
        case 0xD0:
        case 0xD1:
        case 0xD2:
        case 0xD3:
        case 0xD4:
        case 0xD5:
        case 0xD6:
        case 0xD7:
        case 0xD8:
        case 0xD9:
        case 0xDA:
        case 0xDB:
        case 0xDC:
        case 0xDD:
        case 0xDE:
        case 0xDF:    goto yy45;
        case 0xE0:    goto yy47;
        case 0xE1:
        case 0xE2:
        case 0xE3:
        case 0xE4:
        case 0xE5:
        case 0xE6:
        case 0xE7:
        case 0xE8:
        case 0xE9:
        case 0xEA:
        case 0xEB:
        case 0xEC:
        case 0xED:
        case 0xEE:
        case 0xEF:    goto yy48;
        case 0xF0:    goto yy49;
        case 0xF1:
        case 0xF2:
        case 0xF3:    goto yy50;
        case 0xF4:    goto yy51;
        default:    goto yy2;
        }
yy2:
#line 59 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); goto beginning; }
#line 217 "/home/veei/src/calculator/expressions.scanner.cpp"
yy3:
        yych = (unsigned char)*++cursor;
        goto yy108;
yy4:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case 'R':
        case 'r':    goto yy105;
        default:    goto yy53;
        }
yy5:
#line 78 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_IDENTIFIER, expression.substr(start, cursor - p_start)); }
#line 231 "/home/veei/src/calculator/expressions.scanner.cpp"
yy6:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'A':
        case 'a':    goto yy100;
        default:    goto yy53;
        }
yy7:
        yyaccept = 1;
        yych = (unsigned char)*(marker = ++cursor);
        switch (yych) {
        case '.':    goto yy91;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':    goto yy95;
        case 'E':
        case 'e':    goto yy94;
        default:    goto yy8;
        }
yy8:
#line 61 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_INTEGER, expression.substr(start, cursor - p_start)); }
#line 261 "/home/veei/src/calculator/expressions.scanner.cpp"
yy9:
        yyaccept = 2;
        yych = (unsigned char)*(marker = ++cursor);
        switch (yych) {
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\t':
        case '\n':
        case '\v':
        case '\f':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
        case ' ':
        case '!':
        case '"':
        case '#':
        case '$':
        case '%':
        case '&':
        case '\'':
        case '(':
        case ')':
        case '*':
        case '+':
        case ',':
        case '-':
        case '.':
        case '/':
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case ':':
        case ';':
        case '<':
        case '=':
        case '>':
        case '?':
        case '@':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '[':
        case '\\':
        case ']':
        case '^':
        case '_':
        case '`':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':
        case '{':
        case '|':
        case '}':
        case '~':
        case 0x7F:
        case 0xC2:
        case 0xC3:
        case 0xC4:
        case 0xC5:
        case 0xC6:
        case 0xC7:
        case 0xC8:
        case 0xC9:
        case 0xCA:
        case 0xCB:
        case 0xCC:
        case 0xCD:
        case 0xCE:
        case 0xCF:
        case 0xD0:
        case 0xD1:
        case 0xD2:
        case 0xD3:
        case 0xD4:
        case 0xD5:
        case 0xD6:
        case 0xD7:
        case 0xD8:
        case 0xD9:
        case 0xDA:
        case 0xDB:
        case 0xDC:
        case 0xDD:
        case 0xDE:
        case 0xDF:
        case 0xE0:
        case 0xE1:
        case 0xE2:
        case 0xE3:
        case 0xE4:
        case 0xE5:
        case 0xE6:
        case 0xE7:
        case 0xE8:
        case 0xE9:
        case 0xEA:
        case 0xEB:
        case 0xEC:
        case 0xED:
        case 0xEE:
        case 0xEF:
        case 0xF0:
        case 0xF1:
        case 0xF2:
        case 0xF3:
        case 0xF4:    goto yy83;
        default:    goto yy10;
        }
yy10:
#line 92 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(CToken::ET_ERROR, expression.substr(start, cursor - p_start)); }
#line 449 "/home/veei/src/calculator/expressions.scanner.cpp"
yy11:
        yyaccept = 2;
        yych = (unsigned char)*(marker = ++cursor);
        switch (yych) {
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\t':
        case '\n':
        case '\v':
        case '\f':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
        case ' ':
        case '!':
        case '"':
        case '#':
        case '$':
        case '%':
        case '&':
        case '\'':
        case '(':
        case ')':
        case '*':
        case '+':
        case ',':
        case '-':
        case '.':
        case '/':
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case ':':
        case ';':
        case '<':
        case '=':
        case '>':
        case '?':
        case '@':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '[':
        case '\\':
        case ']':
        case '^':
        case '_':
        case '`':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':
        case '{':
        case '|':
        case '}':
        case '~':
        case 0x7F:
        case 0xC2:
        case 0xC3:
        case 0xC4:
        case 0xC5:
        case 0xC6:
        case 0xC7:
        case 0xC8:
        case 0xC9:
        case 0xCA:
        case 0xCB:
        case 0xCC:
        case 0xCD:
        case 0xCE:
        case 0xCF:
        case 0xD0:
        case 0xD1:
        case 0xD2:
        case 0xD3:
        case 0xD4:
        case 0xD5:
        case 0xD6:
        case 0xD7:
        case 0xD8:
        case 0xD9:
        case 0xDA:
        case 0xDB:
        case 0xDC:
        case 0xDD:
        case 0xDE:
        case 0xDF:
        case 0xE0:
        case 0xE1:
        case 0xE2:
        case 0xE3:
        case 0xE4:
        case 0xE5:
        case 0xE6:
        case 0xE7:
        case 0xE8:
        case 0xE9:
        case 0xEA:
        case 0xEB:
        case 0xEC:
        case 0xED:
        case 0xEE:
        case 0xEF:
        case 0xF0:
        case 0xF1:
        case 0xF2:
        case 0xF3:
        case 0xF4:    goto yy72;
        default:    goto yy10;
        }
yy12:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case '=':    goto yy69;
        default:    goto yy13;
        }
yy13:
#line 65 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_ASSIGN, expression.substr(start, cursor - p_start)); }
#line 643 "/home/veei/src/calculator/expressions.scanner.cpp"
yy14:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case '=':    goto yy67;
        default:    goto yy15;
        }
yy15:
#line 67 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_LESS, expression.substr(start, cursor - p_start)); }
#line 653 "/home/veei/src/calculator/expressions.scanner.cpp"
yy16:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case '=':    goto yy65;
        default:    goto yy17;
        }
yy17:
#line 68 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_GREATER, expression.substr(start, cursor - p_start)); }
#line 663 "/home/veei/src/calculator/expressions.scanner.cpp"
yy18:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case '=':    goto yy63;
        default:    goto yy19;
        }
yy19:
#line 76 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_NOT, expression.substr(start, cursor - p_start)); }
#line 673 "/home/veei/src/calculator/expressions.scanner.cpp"
yy20:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case '&':    goto yy62;
        default:    goto yy10;
        }
yy21:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'N':
        case 'n':    goto yy59;
        default:    goto yy53;
        }
yy22:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case '|':    goto yy58;
        default:    goto yy10;
        }
yy23:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'R':
        case 'r':    goto yy56;
        default:    goto yy53;
        }
yy24:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'O':
        case 'o':    goto yy54;
        default:    goto yy53;
        }
yy25:
        yych = (unsigned char)*++cursor;
        goto yy53;
yy26:
        ++cursor;
#line 79 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_DOT, expression.substr(start, cursor - p_start)); }
#line 714 "/home/veei/src/calculator/expressions.scanner.cpp"
yy28:
        ++cursor;
#line 81 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_PLUS, expression.substr(start, cursor - p_start)); }
#line 719 "/home/veei/src/calculator/expressions.scanner.cpp"
yy30:
        ++cursor;
#line 82 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_MINUS, expression.substr(start, cursor - p_start)); }
#line 724 "/home/veei/src/calculator/expressions.scanner.cpp"
yy32:
        ++cursor;
#line 84 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_DIVIDE, expression.substr(start, cursor - p_start)); }
#line 729 "/home/veei/src/calculator/expressions.scanner.cpp"
yy34:
        ++cursor;
#line 85 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_MOD, expression.substr(start, cursor - p_start)); }
#line 734 "/home/veei/src/calculator/expressions.scanner.cpp"
yy36:
        ++cursor;
#line 86 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_TIMES, expression.substr(start, cursor - p_start)); }
#line 739 "/home/veei/src/calculator/expressions.scanner.cpp"
yy38:
        ++cursor;
#line 88 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_LEFT_P, expression.substr(start, cursor - p_start)); }
#line 744 "/home/veei/src/calculator/expressions.scanner.cpp"
yy40:
        ++cursor;
#line 89 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_RIGHT_P, expression.substr(start, cursor - p_start)); }
#line 749 "/home/veei/src/calculator/expressions.scanner.cpp"
yy42:
        ++cursor;
#line 91 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(CToken::ET_EOF, expression.substr(start, cursor - p_start)); }
#line 754 "/home/veei/src/calculator/expressions.scanner.cpp"
yy44:
        yych = (unsigned char)*++cursor;
        goto yy10;
yy45:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0x80:
        case 0x81:
        case 0x82:
        case 0x83:
        case 0x84:
        case 0x85:
        case 0x86:
        case 0x87:
        case 0x88:
        case 0x89:
        case 0x8A:
        case 0x8B:
        case 0x8C:
        case 0x8D:
        case 0x8E:
        case 0x8F:
        case 0x90:
        case 0x91:
        case 0x92:
        case 0x93:
        case 0x94:
        case 0x95:
        case 0x96:
        case 0x97:
        case 0x98:
        case 0x99:
        case 0x9A:
        case 0x9B:
        case 0x9C:
        case 0x9D:
        case 0x9E:
        case 0x9F:
        case 0xA0:
        case 0xA1:
        case 0xA2:
        case 0xA3:
        case 0xA4:
        case 0xA5:
        case 0xA6:
        case 0xA7:
        case 0xA8:
        case 0xA9:
        case 0xAA:
        case 0xAB:
        case 0xAC:
        case 0xAD:
        case 0xAE:
        case 0xAF:
        case 0xB0:
        case 0xB1:
        case 0xB2:
        case 0xB3:
        case 0xB4:
        case 0xB5:
        case 0xB6:
        case 0xB7:
        case 0xB8:
        case 0xB9:
        case 0xBA:
        case 0xBB:
        case 0xBC:
        case 0xBD:
        case 0xBE:
        case 0xBF:    goto yy44;
        default:    goto yy46;
        }
yy46:
        cursor = marker;
        switch (yyaccept) {
        case 0: 	goto yy2;
        case 1: 	goto yy8;
        case 2: 	goto yy10;
        default:	goto yy93;
        }
yy47:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0xA0:
        case 0xA1:
        case 0xA2:
        case 0xA3:
        case 0xA4:
        case 0xA5:
        case 0xA6:
        case 0xA7:
        case 0xA8:
        case 0xA9:
        case 0xAA:
        case 0xAB:
        case 0xAC:
        case 0xAD:
        case 0xAE:
        case 0xAF:
        case 0xB0:
        case 0xB1:
        case 0xB2:
        case 0xB3:
        case 0xB4:
        case 0xB5:
        case 0xB6:
        case 0xB7:
        case 0xB8:
        case 0xB9:
        case 0xBA:
        case 0xBB:
        case 0xBC:
        case 0xBD:
        case 0xBE:
        case 0xBF:    goto yy45;
        default:    goto yy46;
        }
yy48:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0x80:
        case 0x81:
        case 0x82:
        case 0x83:
        case 0x84:
        case 0x85:
        case 0x86:
        case 0x87:
        case 0x88:
        case 0x89:
        case 0x8A:
        case 0x8B:
        case 0x8C:
        case 0x8D:
        case 0x8E:
        case 0x8F:
        case 0x90:
        case 0x91:
        case 0x92:
        case 0x93:
        case 0x94:
        case 0x95:
        case 0x96:
        case 0x97:
        case 0x98:
        case 0x99:
        case 0x9A:
        case 0x9B:
        case 0x9C:
        case 0x9D:
        case 0x9E:
        case 0x9F:
        case 0xA0:
        case 0xA1:
        case 0xA2:
        case 0xA3:
        case 0xA4:
        case 0xA5:
        case 0xA6:
        case 0xA7:
        case 0xA8:
        case 0xA9:
        case 0xAA:
        case 0xAB:
        case 0xAC:
        case 0xAD:
        case 0xAE:
        case 0xAF:
        case 0xB0:
        case 0xB1:
        case 0xB2:
        case 0xB3:
        case 0xB4:
        case 0xB5:
        case 0xB6:
        case 0xB7:
        case 0xB8:
        case 0xB9:
        case 0xBA:
        case 0xBB:
        case 0xBC:
        case 0xBD:
        case 0xBE:
        case 0xBF:    goto yy45;
        default:    goto yy46;
        }
yy49:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0x90:
        case 0x91:
        case 0x92:
        case 0x93:
        case 0x94:
        case 0x95:
        case 0x96:
        case 0x97:
        case 0x98:
        case 0x99:
        case 0x9A:
        case 0x9B:
        case 0x9C:
        case 0x9D:
        case 0x9E:
        case 0x9F:
        case 0xA0:
        case 0xA1:
        case 0xA2:
        case 0xA3:
        case 0xA4:
        case 0xA5:
        case 0xA6:
        case 0xA7:
        case 0xA8:
        case 0xA9:
        case 0xAA:
        case 0xAB:
        case 0xAC:
        case 0xAD:
        case 0xAE:
        case 0xAF:
        case 0xB0:
        case 0xB1:
        case 0xB2:
        case 0xB3:
        case 0xB4:
        case 0xB5:
        case 0xB6:
        case 0xB7:
        case 0xB8:
        case 0xB9:
        case 0xBA:
        case 0xBB:
        case 0xBC:
        case 0xBD:
        case 0xBE:
        case 0xBF:    goto yy48;
        default:    goto yy46;
        }
yy50:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0x80:
        case 0x81:
        case 0x82:
        case 0x83:
        case 0x84:
        case 0x85:
        case 0x86:
        case 0x87:
        case 0x88:
        case 0x89:
        case 0x8A:
        case 0x8B:
        case 0x8C:
        case 0x8D:
        case 0x8E:
        case 0x8F:
        case 0x90:
        case 0x91:
        case 0x92:
        case 0x93:
        case 0x94:
        case 0x95:
        case 0x96:
        case 0x97:
        case 0x98:
        case 0x99:
        case 0x9A:
        case 0x9B:
        case 0x9C:
        case 0x9D:
        case 0x9E:
        case 0x9F:
        case 0xA0:
        case 0xA1:
        case 0xA2:
        case 0xA3:
        case 0xA4:
        case 0xA5:
        case 0xA6:
        case 0xA7:
        case 0xA8:
        case 0xA9:
        case 0xAA:
        case 0xAB:
        case 0xAC:
        case 0xAD:
        case 0xAE:
        case 0xAF:
        case 0xB0:
        case 0xB1:
        case 0xB2:
        case 0xB3:
        case 0xB4:
        case 0xB5:
        case 0xB6:
        case 0xB7:
        case 0xB8:
        case 0xB9:
        case 0xBA:
        case 0xBB:
        case 0xBC:
        case 0xBD:
        case 0xBE:
        case 0xBF:    goto yy48;
        default:    goto yy46;
        }
yy51:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 0x80:
        case 0x81:
        case 0x82:
        case 0x83:
        case 0x84:
        case 0x85:
        case 0x86:
        case 0x87:
        case 0x88:
        case 0x89:
        case 0x8A:
        case 0x8B:
        case 0x8C:
        case 0x8D:
        case 0x8E:
        case 0x8F:    goto yy48;
        default:    goto yy46;
        }
yy52:
        ++cursor;
        yych = (unsigned char)*cursor;
yy53:
        switch (yych) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '_':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':    goto yy52;
        default:    goto yy5;
        }
yy54:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'T':
        case 't':    goto yy55;
        default:    goto yy53;
        }
yy55:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '_':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':    goto yy52;
        default:    goto yy19;
        }
yy56:
        ++cursor;
        switch ((yych = (unsigned char)*cursor)) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'Y':
        case 'Z':
        case '_':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'w':
        case 'x':
        case 'y':
        case 'z':    goto yy52;
        default:    goto yy57;
        }
yy57:
#line 75 "/home/veei/src/calculator/expressions.scanner.re"
        { state.move(cursor - p_start); return CToken(ET_EXPR_OR, expression.substr(start, cursor - p_start)); }
#line 1300 "/home/veei/src/calculator/expressions.scanner.cpp"
yy58:
        yych = (unsigned char)*++cursor;
        goto yy57;
yy59:
        yych = (unsigned char)*++cursor;
        switch (yych) {
        case 'D':
        case 'd':    goto yy60;
        default:    goto yy53;
        }
